--- a/Source code/Elysium/Themes/Buttons/DropDownCommandButton.xaml
+++ b/Source code/Elysium/Themes/Buttons/DropDownCommandButton.xaml
@@ -39,7 +39,6 @@
                                         KeyboardNavigation.DirectionalNavigation="Cycle"/>
                         </ScrollViewer>
                     </Border>
-
                     <ControlTemplate.Triggers>
                         <DataTrigger Binding="{Binding ElementName=LayoutRoot, Path=Tag}" Value="True">
                             <Setter TargetName="LayoutRoot" Property="Effect">
@@ -59,16 +58,13 @@
         </Setter>
     </Style>
 
-    <Style x:Key="{x:Type controls:DropDownCommandButton}" TargetType="{x:Type controls:DropDownCommandButton}" BasedOn="{StaticResource {x:Type primitives:CommandButtonBase}}">
-        
+    <Style x:Key="{x:Type controls:DropDownCommandButton}" TargetType="{x:Type controls:DropDownCommandButton}" BasedOn="{StaticResource {x:Type primitives:CommandButtonBase}}">        
         <Style.Resources>
             <Style TargetType="{x:Type controls:Submenu}" BasedOn="{StaticResource DropDownCommandButtonSubmenuStyle}"/>
-        </Style.Resources>
-        
+        </Style.Resources>        
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type controls:DropDownCommandButton}">
-
                     <Grid x:Name="LayoutRoot"
                           Background="{DynamicResource TransparentBrush}"                          
                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
@@ -120,30 +116,26 @@
                         <Popup x:Name="PART_Popup"
                                Grid.Row="1"
                                AllowsTransparency="True"
-                               IsOpen="{Binding IsDropDownOpen, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+                               IsOpen="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=IsDropDownOpen, Mode=TwoWay}"
                                StaysOpen="False"
                                Placement="Custom"
                                VerticalOffset="{TemplateBinding root:Parameters.BoldPaddingValue}"
                                MaxHeight="{TemplateBinding MaxDropDownHeight}"/>
-                    </Grid>
-                    
+                    </Grid>                    
                     <ControlTemplate.Triggers>
                         <Trigger Property="Header" Value="{x:Null}">
                             <Setter TargetName="PART_HeaderHost" Property="Visibility" Value="Collapsed"/>
                         </Trigger>
-                    </ControlTemplate.Triggers>
-                    
+                    </ControlTemplate.Triggers>                    
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-
         <Style.Triggers>
             <Trigger Property="IsDropDownOpen" Value="True">
                 <Setter Property="BorderBrush" Value="{DynamicResource ForegroundBrush}"/>
                 <Setter Property="root:Parameters.CommandButtonMask" Value="{DynamicResource ForegroundBrush}"/>
             </Trigger>
         </Style.Triggers>
-
     </Style>
 
 </ResourceDictionary>
