--- a/Source code/Elysium/Themes/Ranges/Slider.xaml
+++ b/Source code/Elysium/Themes/Ranges/Slider.xaml
@@ -7,18 +7,13 @@
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="SliderRepeatButtonStyle" TargetType="{x:Type RepeatButton}">
-
         <Setter Property="Background" Value="{DynamicResource MiddleLightBrush}"/>
-
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
-
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
-
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
-
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type RepeatButton}">
@@ -30,41 +25,31 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Background" Value="{DynamicResource HighlightBrush}"/>
             </Trigger>
         </Style.Triggers>
-
     </Style>
     
-    <Style x:Key="SliderRepeatButtonValuableStyle" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource SliderRepeatButtonStyle}">
-        
-        <Setter Property="Background" Value="{DynamicResource AccentBrush}"/>
-        
+    <Style x:Key="SliderRepeatButtonValuableStyle" TargetType="{x:Type RepeatButton}" BasedOn="{StaticResource SliderRepeatButtonStyle}">        
+        <Setter Property="Background" Value="{DynamicResource AccentBrush}"/>        
         <Style.Triggers>            
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Background" Value="{DynamicResource DisabledBrush}"/>
             </Trigger>            
-        </Style.Triggers>
-        
+        </Style.Triggers>        
     </Style>
 
-    <Style x:Key="SliderThumbStyle" TargetType="{x:Type Thumb}">
-        
+    <Style x:Key="SliderThumbStyle" TargetType="{x:Type Thumb}">        
         <Setter Property="Background" Value="{DynamicResource MiddleLightBrush}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource BackgroundBrush}"/>
-
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Focusable" Value="False"/>
-
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
-
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
-
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
@@ -76,8 +61,7 @@
                             SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                 </ControlTemplate>
             </Setter.Value>
-        </Setter>
-        
+        </Setter>        
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="Background" Value="{DynamicResource LowlightBrush}"/>
@@ -89,7 +73,6 @@
                 <Setter Property="Background" Value="{DynamicResource DisabledBrush}"/>
             </Trigger>            
         </Style.Triggers>
-
     </Style>
 
     <ControlTemplate x:Key="HorizontalSliderTemplate" TargetType="{x:Type Slider}">
@@ -124,7 +107,7 @@
                     <Thumb BorderThickness="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Right}"
                            IsEnabled="{TemplateBinding IsEnabled}"
                            Width="{TemplateBinding root:Parameters.SliderThumbThickness}"
-                           Height="{TemplateBinding Height}"
+                           Height="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=ActualHeight, Mode=OneWay}"
                            Style="{StaticResource SliderThumbStyle}"/>
                 </Track.Thumb>
                 <Track.IncreaseRepeatButton>
@@ -173,7 +156,7 @@
                 <Track.Thumb>
                     <Thumb BorderThickness="{Binding RelativeSource={RelativeSource Self}, Path=(root:Parameters.DefaultPaddingValue), Mode=OneWay, Converter={StaticResource DoubleToThicknessConverter}, ConverterParameter=Top}"
                            IsEnabled="{TemplateBinding IsEnabled}"
-                           Width="{TemplateBinding Width}"
+                           Width="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=ActualWidth, Mode=OneWay}"
                            Height="{TemplateBinding root:Parameters.SliderThumbThickness}"
                            Style="{StaticResource SliderThumbStyle}"/>
                 </Track.Thumb>
@@ -193,7 +176,6 @@
     </ControlTemplate>
 
     <Style TargetType="{x:Type Slider}">
-
         <Setter Property="Background" Value="{x:Null}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource MiddleLightBrush}"/>
         <Setter Property="BorderThickness" Value="0"/>
@@ -202,15 +184,11 @@
         <Setter Property="FontStretch" Value="Medium"/>
         <Setter Property="FontStyle" Value="Normal"/>
         <Setter Property="FontWeight" Value="Normal"/>
-
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
-        <Setter Property="Focusable" Value="False"/>
-        
+        <Setter Property="Focusable" Value="False"/>        
         <Setter Property="Stylus.IsPressAndHoldEnabled" Value="False"/>
-
         <Setter Property="OverridesDefaultStyle" Value="True"/>
         <Setter Property="SnapsToDevicePixels" Value="True"/>
-
         <Style.Triggers>            
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="BorderBrush" Value="{DynamicResource DisabledBrush}"/>
@@ -228,7 +206,6 @@
                 <Setter Property="Template" Value="{StaticResource VerticalSliderTemplate}"/>                   
             </Trigger>            
         </Style.Triggers>
-
     </Style>
 
 </ResourceDictionary>
