--- a/Source code/Elysium/Themes/Selectors/ListBoxItem.xaml
+++ b/Source code/Elysium/Themes/Selectors/ListBoxItem.xaml
@@ -5,7 +5,8 @@
         <ResourceDictionary Source="/Elysium;component/Themes/Selectors/SelectorsItemsBase.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
-    <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource SelectorsItemsBaseStyle}">
+    <Style TargetType="{x:Type ListBoxItem}" BasedOn="{StaticResource SelectorsItemsBaseStyle}">        
+        <Setter Property="OverridesDefaultStyle" Value="True"/>        
         <Style.Triggers>
             <MultiTrigger>
                 <MultiTrigger.Conditions>
@@ -27,7 +28,7 @@
                     <Setter Property="Foreground" Value="{DynamicResource ContrastBrush}"/>
                 </MultiTrigger.Setters>
             </MultiTrigger>
-        </Style.Triggers>
+        </Style.Triggers>        
     </Style>
     
 </ResourceDictionary>
